[tool.poetry]
name = "telegram-archived-viewer-bot"
version = "0.1.0"
description = ""
authors = ["pcroland <pcroland@protonmail.ch>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.26.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
